tests/NormalTests/paczka1/fuzzy1/68543042.err
Error in line 1: AoTjXqnamu A219 78,2
Error in line 22: d6wgrTmT2 S173 79,40
Error in line 26: S520 A219 -1,2
Error in line 23: 1QigDav87ON S520 79,4
Error in line 20: d6wgrTmT2 S173 29,7
Error in line 31: 1QigDav87ON S173 6,3
Error in line 30: d6wgrTmT2 A219 67,8
